--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,8 @@ services:
       name: sample-service-name
       env: python # valid values: https://render.com/docs/yaml-spec#environment
       buildCommand: "./render_build.sh"
-      startCommand: "gunicorn wsgi --chdir ./src/"
+      # startCommand: "gunicorn wsgi --chdir ./src/"
+      startCommand: "gunicorn wsgi:app -k eventlet -w 1 --bind 0.0.0.0:$PORT --chdir ./src"
       plan: free # optional; defaults to starter
       numInstances: 1
       envVars:
@@ -31,3 +32,4 @@ databases: # Render PostgreSQL database
       region: ohio
       ipAllowList: [] # only allow internal connections
       plan: free # optional; defaults to starter
+
