--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "vite",
-        "start": "vite",
-        "build": "vite build",
-        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+		"start": "vite",
+		"build": "vite build",
+		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
 	},
 	"author": {
 		"name": "Alejandro Sanchez",
@@ -30,13 +30,13 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/react": "^18.2.18",
-        "@types/react-dom": "^18.2.7",
-        "@vitejs/plugin-react": "^4.0.4",
-        "eslint": "^8.46.0",
-        "eslint-plugin-react": "^7.33.1",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.3",
-        "vite": "^4.4.8"
+		"@types/react-dom": "^18.2.7",
+		"@vitejs/plugin-react": "^4.0.4",
+		"eslint": "^8.46.0",
+		"eslint-plugin-react": "^7.33.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"vite": "^4.4.8"
 	},
 	"babel": {
 		"presets": [
@@ -54,9 +54,26 @@
 		]
 	},
 	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.1",
+		"@fontsource/roboto": "^5.2.6",
+		"@mui/icons-material": "^7.3.2",
+		"@mui/material": "^7.3.2",
+		"@mui/x-charts": "^8.11.1",
+		"@mui/x-date-pickers": "^8.11.2",
+		"axios": "^1.12.2",
+		"country-state-city": "^3.2.1",
+		"dayjs": "^1.11.18",
+		"emoji-picker-element": "^1.27.0",
+		"gsap": "^3.13.0",
+		"i18n-iso-countries": "^7.14.0",
+		"lucide-react": "^0.544.0",
 		"prop-types": "^15.8.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.18.0"
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.18.0",
+		"socket.io-client": "^4.8.1",
+		"sweetalert2": "^11.23.0",
+		"three": "^0.180.0"
 	}
 }
