Se ha agregado un tutorial de como usar jwt , configuracion de correo y arreglar el end point de creacion de usuario para que no envie email

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,27 @@ FLASK_APP=src/app.py
 FLASK_DEBUG=1
 DEBUG=TRUE
 
+# JWT Configuration
+JWT_SECRET_KEY="change-this-to-a-secure-random-key"
+
+# Email Configuration (SMTP)
+# Para Gmail: genera una contraseña de aplicación en https://myaccount.google.com/apppasswords
+# Para desarrollo: usa Mailtrap (https://mailtrap.io) - no envía emails reales
+MAIL_SERVER=smtp.gmail.com
+MAIL_USERNAME=tu-email@gmail.com
+MAIL_PASSWORD=tu-contraseña-de-aplicacion
+
+# Cloudinary (opcional - para subida de imágenes)
+#CLOUDINARY_CLOUD_NAME=tu-cloud-name
+#CLOUDINARY_API_KEY=tu-api-key
+#CLOUDINARY_API_SECRET=tu-api-secret
+
+# Frontend URL (usado en links de emails)
+VITE_FRONTEND_URL=http://localhost:5173
+
+# Socket.io Secret Key
+#SOCKET_SECRET_KEY="tu-clave-secreta-para-sockets"
+
 # Front-End Variables
 VITE_BASENAME=/
 #VITE_BACKEND_URL=
